--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,4 +3,6 @@
 {% include analytics.html %}
 {% include /comments-providers/scripts.html %}
 
-<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=F4H_asxORlgrmhp5Jm5UZkc-1HAE8q85yaTiP4A5fyk"></script>
+<div style="width: 300px; height: 300px; margin: auto;">
+  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=F4H_asxORlgrmhp5Jm5UZkc-1HAE8q85yaTiP4A5fyk"></script>
+</div>
